Getting started on the project.

--- a/style.css
+++ b/style.css
@@ -1,17 +1,24 @@
-form{
-  padding-top: 1rem;
-  margin-left: 3rem;
-  margin-top: 3rem;
+h1{
+  display: flex;
+  justify-content: left;
+  font-family: fantasy;
 }
 
 #form{
+  display: flex;
+  justify-content: space-around;
   background-color: beige;
-  margin-left: 20rem;
-  margin-right: 20rem;
-  margin-top: 5rem;
-  width: 20rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  width: 18rem; 
 }
 
 input{
   margin: 1rem;
+}
+
+.library{
+  display: flex;
+  justify-content: right;
+  background-color: darkgrey;
 }
