--- a/style.css
+++ b/style.css
@@ -1,45 +1,43 @@
-body{
-  display: grid;
-  grid-template-columns: 25% 75%;
-  grid-template-rows: 25vh 75vh;
-  grid-gap: 1rem;
-  background-color: beige;
-  
+body {
+	display: grid;
+	grid-template-columns: 25% 75%;
+	grid-template-rows: 50% 50%;
+	grid-gap: 1rem;
+	background-color: beige;
 }
 
-h1, #header{
-  grid-column: 1 / span 2;
-  font-family: fantasy;
+h1,
+#header {
+	grid-column: 1 / span 2;
+	font-family: fantasy;
 }
 
-#form{
-  display: flex;
-  justify-content: space-around;
-  background-color:darkgrey;
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-  width: 18rem; 
-
+#form {
+	display: flex;
+	justify-content: space-around;
+	background-color: darkgrey;
+	padding-top: 2rem;
+	padding-bottom: 2rem;
+	width: 18rem;
 }
 
-input{
-  margin: 1rem;
+input {
+	margin: 1rem;
 }
 
-.library{
-  display: grid;
-  grid-template-columns: 100%;
-  grid-template-rows: 50% 50% ;
-  background-color: white;
-  margin-right: 1rem;
+.library {
+	display: grid;
+	grid-template-columns: 100%;
+	grid-template-rows: 50% 50%;
+	background-color: white;
+	margin-right: 1rem;
 }
 
-thead{
-  grid-column: 1;
-  background-color: darkgrey;
-  
+thead {
+	grid-column: 1;
+	background-color: darkgrey;
 }
-tbody{
-  font-size: large;
-  text-align: center;
+tbody {
+	font-size: large;
+	text-align: center;
 }
